--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rejaul Portfolio</title>
 
+    <!-- google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi,This is Rejaul !</h1>
+    <section class="header-section">
+        <div class="header-text half-width">
+            <h1>Welcome to</h1>
+            <h1> <span class="heading-color">Peter perker</span> world !</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a href="#" target="_blank" class="btn">HIRE ME</a>
+        </div>
+       <div class="header-img half-width">
+            <img src="images/rejaul-bg.png" alt=""> 
+       </div>
+    </section>
+    <section class="dream-big-section">
+        <div class="dream-img half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="dream-text half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="" target="_blank" class="btn">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
