--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
             <a href="" target="_blank" class="btn">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="Experiences-area">
+        <h1>Experiences</h1>
+        <div class="flexiable-container ">
+            <div class="experience-web experience-web-border">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="heading-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experience-web  experience-baby-border">
+                <h2>Baby Web Developer</h2>
+                <h3 class="heading-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 
 
 
